# Kimi-Audio-Training

./: .gitignore  .gitmodules  Dockerfile  README.md  eval.py  finetune.py  finetune_lora.py  infer.py  note.ipynb  pyproject.toml  requirements.txt
finetune/: finetune_lora_single_gpu.sh  finetune_qlora_single_gpu.sh
finetune_codes/: README.md  check_sft_infer.py  configuration_moonshot_kimia.py  datasets.py  ds_config_zero1.json  extract_semantic_codes.py  finetune_ds.sh  finetune_lora_ds.sh  lora_config.py  model.py  modeling_kimia.py
finetune_codes/demo_data/audio_understanding/: data.jsonl  prepare_librispeech_asrtask.py
finetune_codes/demo_data/audio_understanding/audios/: librispeech_1263-139804-0001.flac  librispeech_1263-139804-0002.flac  librispeech_1263-139804-0004.flac  librispeech_1263-139804-0005.flac
kimia_infer/api/: kimia.py  prompt_manager.py
kimia_infer/models/tokenizer/: glm4_tokenizer.py  glm4_utils.py
kimia_infer/models/tokenizer/whisper_Lv3/: whisper.py
kimia_infer/utils/: data.py
test_audios/multiturn/case1/: multiturn_a1.txt
test_audios/multiturn/case2/: multiturn_a1.txt
