# ---------- pyproject.toml ----------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "kimi-audio"
version     = "0.1.0"        
description = "Inference library for the Kimi‑Audio foundation model"
readme      = "README.md"
license     = {text = "MIT"}
authors     = [
  {name = "MoonshotAI", email = "contact@moonshot.ai"}
]

# Direct dependencies – copied from requirements.txt
dependencies = [
  "torch==2.4.1",
  "torchaudio==2.4.1",
  "packaging",
  "jinja2",
  "openai-whisper",
  "jsonlines",
  "pandas",
  "validators",
  "sty",
  "transformers",
  "librosa",
  "accelerate",
  "aiohttp",
  "colorama",
  "omegaconf==2.3.0",
  "sox",
  "six==1.16.0",
  "hyperpyyaml",
  "conformer==0.3.2",
  "diffusers",
  "pillow",
  "sentencepiece",
  "easydict",
  "fire",
  "ujson",
  "cairosvg",
  "immutabledict",
  "rich",
  "wget",
  "gdown",
  "datasets",
  "torchdyn==1.0.6",
  "huggingface_hub
  "loguru",
  "blobfile",
  "timm",
  "sacrebleu==1.5.1",
  "soundfile",
  "tqdm"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kimia_infer*",]

[project.urls]
Repository = "https://github.com/MoonshotAI/Kimi-Audio"

