# ---------- pyproject.toml ----------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "kimi-audio"
version     = "0.1.0"
description = "Inference library for the Kimi‑Audio foundation model"
readme      = "README.md"
license     = {text = "MIT"}
authors     = [{name = "MoonshotAI", email = "contact@moonshot.ai"}]

dependencies = [
    # Core ML dependencies
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "flash-attn>=2.0.0",
    "transformers",
    "accelerate",
    "diffusers",
    "conformer==0.3.2",
    "torchdyn==1.0.6",
    "librosa",
    "soundfile",
    "sox",
    "openai-whisper",
    "pandas",
    "jsonlines",
    "datasets",
    "huggingface_hub",
    "decord",
    "blobfile",
    "packaging",
    "jinja2",
    "validators",
    "sty",
    "colorama",
    "omegaconf==2.3.0",
    "six>=1.16.0",
    "hyperpyyaml",
    "pillow",
    "sentencepiece",
    "easydict",
    "fire",
    "ujson",
    "cairosvg",
    "immutabledict",
    "rich",
    "wget",
    "gdown",
    "timm",
    "sacrebleu==1.5.1",
    "tqdm",
    "loguru",
    "flash-attn"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kimia_infer*"]

[tool.setuptools.package-data]
"kimia_infer" = ["**/*"]

[project.urls]
Repository = "https://github.com/MoonshotAI/Kimi-Audio"
